--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  height: 100%;
+}
+
+body {
+  background-color: #f3f4f6; /* Replace with your desired background color */
+}
