--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@media (max-width: 768px) {
+  .upload-component,
+  .retrieve-component {
+    width: 100%;
+    height: 50vh; /* 50% of the viewport height */
+  }
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
